--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="https://cdn.pixabay.com/download/audio/2022/10/30/audio_b4825d3e3c.mp3?filename=romantic-piano-ambient-122163.mp3" type="audio/mpeg">
+    <source src="romantic-piano-solo-more-on-httpsmirceaiancubandcampcom-334668.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
   <div class="hearts"></div>
