--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
   <audio autoplay loop>
-    <source src="romantic-piani.mp3" type="audio/mpeg">
+    <source src="romantic-piano.mp3" type="audio/mpeg">
   </audio>
   <div class="hearts"></div>
   <pre id="message"></pre>
