--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <style>
     body {
       margin: 0;
-      background: url('file_00000000d468622faed99b0f1ea05fc2.jpeg') no-repeat center center fixed;
+      background: url('file_00000000d468622faed99b0f1ea05fc2.png') no-repeat center center fixed;
       background-size: cover;
       font-family: "Courier New", Courier, monospace;
       color: #fff;
